improvment to margin padding and class

--- a/index.html
+++ b/index.html
@@ -7,23 +7,20 @@
   <style>
 
     body {
-      margin-top: 50px;
-      margin-bottom: 50px;
-      margin-right: 100px;
-      margin-left: 100px;
+      margin: 50px 100px;
       border:1px solid black;
     }
-    p.warning{color:red;}
+    .warning{color:red;}
 
     ol,li {
       background-color: lightgreen;
       color: orange;
       font-size: 20px;
-      font-height: 50;
+      line-height: 50px;
     }
 
-    p.indented  {
-      padding: 50px    50px      50px     50px;
+    .indented  {
+      padding: 50px;
     }
   </style>
 
@@ -32,7 +29,7 @@
 
   <h1>Resume of <strong>Pee-Wee</strong></h1>
   <h3>Introduction</h3>
-  <p>Pee-wee is a <i>fictional</i> character.Here is my
+  <p>Pee-wee is a <i>fictional</i> character.Here is the
     <a href="https://www.google.com/search?q=pee-wee+herman&espv=2&biw=1280&bih=728&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjO7t6gzenLAhXmwYMKHXO6C-8Q_AUIBygC"> image </a>
   </p>
 
@@ -50,6 +47,5 @@
       Reubens decided to shelve his alter ego during the 1990s,
       then gradually resurrected it during the following decade.
   </p>
-
   </body>
 </html>
